# HairNet_orient2D

./: LICENCE  README
Hair_Orient2D/: .OrientMap.hpp.swp  CMakeLists.txt  Color.h  Im.hpp  MathUtils.hpp  Orient2D.hpp  OrientMap.hpp  Renderer.h  SimpleVertexShader.vertexshader  Vec.hpp  XForm.h  main.cpp  main_nobodyrender.cpp
model/: real2synthetic_head_transformation.txt
test_imgs/orient_img/: 1.exr  2.exr
test_imgs/orient_img_with_body/: 1.exr  2.exr
test_imgs/orient_img_with_body_256/: 1.exr  2.exr
